--- a/_posts/2012-03-12-the-curious-case-of-ben-brooks-spitefulness.textile
+++ b/_posts/2012-03-12-the-curious-case-of-ben-brooks-spitefulness.textile
@@ -19,5 +19,7 @@ From Ben's screen shot, he emailed Rich Ziade (not their Support staff I might a
 
 Had Ben had emailed their Support staff of 2 people his opt out would have been processed within a day or 2 "according to Chris":https://twitter.com/#!/chrisdary/status/178922211296559105.
 
-It all seems very spiteful towards Readability and their small team.  Personally I feel that previously being announced as "iPhone App of the Week":http://www.flickr.com/photos/zeldman/6949783445/ and launching an "Android version of their app today":http://blog.readability.com/2012/03/readability-android/ is a big achievement for the small team at Readability.  They don't deserve to be accused of being called "shady".
+It all seems very spiteful towards Readability and their small team.  Ben even went to the extent of requesting that his web site be blocked by Readabilility.
+
+Personally I feel that previously being announced as "iPhone App of the Week":http://www.flickr.com/photos/zeldman/6949783445/ and launching an "Android version of their app today":http://blog.readability.com/2012/03/readability-android/ is a big achievement for the small team at Readability.  They don't deserve to be accused of being called "shady".
 
