--- a/_posts/2012-03-12-the-curious-case-of-ben-brooks-spitefulness.textile
+++ b/_posts/2012-03-12-the-curious-case-of-ben-brooks-spitefulness.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The Curious Case of Ben Brooks Spitefulness
+title: The Curious Case of Ben Brooks' Spitefulness
 date: 2012-03-12 08:57
 post-link: http://brooksreview.net/2012/03/harder-than-opting-out-of-tsa-screening/
 ---
