Also install ruby-build

--- a/_posts/2013-03-26-setting-up-a-ruby-rbenv-environment-on-os-x.textile
+++ b/_posts/2013-03-26-setting-up-a-ruby-rbenv-environment-on-os-x.textile
@@ -16,6 +16,7 @@ Install rbenv and ruby-build via brew
 {% highlight bash %}
 brew update
 brew install rbenv
+brew install ruby-build
 {% endhighlight %}
 
 Add rbenv init to your shell to enable shims and autocompletion.
