--- a/pages/archives.textile
+++ b/pages/archives.textile
@@ -20,7 +20,7 @@ h1. {{ page.title }}
       {% endif %}
     {% endunless %}
 
-    <li><span class="post_date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+    <li><span class="post_date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
 </div>
