--- a/pages/about.textile
+++ b/pages/about.textile
@@ -7,9 +7,9 @@ h1. {{ page.title }}
 
 I believe we live in interesting times.
 
-I am an Australian expatriate, 10+ year IT professional specializing in VoIP and iOS development living in Honolulu, Hawaii.
+I am an Australian expatriate, 10+ year IT professional specializing in Systems Engineering, VoIP and iOS development living in Honolulu, Hawaii.
 
-I genuinely enjoy writing and by nature I think a lot.  Writing helps to clear my head.
+By nature I think a lot.  Writing helps to clear my head.
 
 What I aim to have on this site is my tech analysis, thoughts on future trends and other forms of pattern recognition.
 
@@ -19,13 +19,13 @@ Thanks.
 
 h1. Colophon
 
-This website is produced primarily on an Apple MacBook Air 13" 2010 model.
+This website is produced primarily on an Apple MacBook Pro Retina 13" 2013 model.
 
 "Vim":http://www.vim.org/ is my only text editor.
 
-I'm a big fan of the succinct and straightforward Textile syntax which is the markup language used to create this site.
+I'm a big fan of the succinct and straightforward Textile syntax which was the markup language used to create this site. I have however reluctantly switched to using Markdown since it's become more of a standard.
 
 This site runs "Jekyll":http://jekyllrb.com/, the simple, blog aware, static site generator.
 
-Site analytics are tracked using the GPL licensed "Piwik":http://piwik.org/.
+This site does not run any site analytics.
 
