--- a/pages/macwalletbuilds.textile
+++ b/pages/macwalletbuilds.textile
@@ -5,25 +5,23 @@ title: Certified Mac Wallet Builds
 
 h1. {{ page.title }}
 
-h2. Introduction
+h3. Introduction
 
-This page outlines my Certified Mac Wallet Builds program.
+This page outlines my Certified Mac Wallet Builds program for the cryptocurrency community.
 
 I am heavily involved in the cryptocurrency scene and offer these services as I am a registered Mac and iOS developer with Apple.  You can see the iOS Apps I have in the App Store in my <a href="{{ site.baseurl }}pages/projects.html">Projects page</a>.
 
 My offer is to build and digitally sign your coin's Mac Wallet using my Apple-issued digital certificate and Developer ID.
 
-The may then distribute an installer file for your coin's Mac Wallet to your end users.  Your end users can download and use your Mac Wallet with confidence that it has been built by a trusted member of the community.
+The coin development team may then distribute an installer file for the Mac Wallet to your end users.  Your end users can download and use your Mac Wallet with confidence that it has been built by a trusted member of the community.
 
 My aim as with all my cryptocurrency endeavors is to raise the level of professionalism and security in cryptocurrency.
 
 This program is priced at 0.38 Bitcoins, payable via my <a href="https://coinbase.com/jyap">Coinbase account</a>.  Please contact me if you are interested.
 
-I believe this program offers excellent value and benefits for your coin and for your end users.
+h3. Further details
 
-h2. Further details
-
-My builds are performed on a Mac running OS X 10.7 and built against the 10.7 
+My builds are performed on a Mac running OS X 10.7 and built against the 10.7 SDK.
 
 Since I am heavily involved in the cryptocurrency scene, I am often readily available to perform emergency builds.  I have read numerous BitcoinTalk threads where coin developers go missing at a crucial moment in their coin's infancy, leading to block chain forks and suspended trading.
 
@@ -31,7 +29,7 @@ I have previously built Mac Wallets for coins such as Razorcoin, Nautiluscoin, U
 
 Here is an example of verifying one of my signed builds from the command line.
 
-```
+{% highlight console %}
 $ codesign -dvvv Bitcoin-Qt.app
 Executable=/Applications/Bitcoin-Qt.app/Contents/MacOS/Bitcoin-Qt
 Identifier=org.bitcoinfoundation.Bitcoin-Qt
@@ -48,17 +46,19 @@ Info.plist entries=16
 TeamIdentifier=not set
 Sealed Resources version=1 rules=4 files=11
 Internal requirements count=1 size=192
-```
+{% endhighlight %}
 
 In OS X 10.7, Apple introduced Gatekeeper which blocks applications downloaded from the internet which have not been signed.  In OS X 10.8, by default if an app is unsigned, Gatekeeper blocks the app from being installed and warns you that it did not come from an identified developer.  Having your Mac Wallet signed avoids this end user usability issue and enhances the trust of your Mac Wallet.
 
-h2. Agreement
+INSTALLER SCREEN SHOTS GO HERE
+
+h3. Agreement
 
 I offer builds for up to 2 years or up to 5 releases (whichever comes first).
 
 You agree to host the downloadable installer file.  It is preferable that you host this on your own domain and not a 3rd party download service such as Dropbox, Google Drive or MEGA.
 
-Builds will signed my Apple Mac developer account.  You agree to give me permission to do this on behalf of your coin and your coin's community.
+Builds will be signed my Apple Mac developer account.  You agree to give me permission to do this on behalf of your coin and your coin's community.
 
 Only coins which are distributed using a FOSS (Free and Open Source Software) license will be accepted.  You agree to host the source code for your wallet in a publically accessible repository.
 
