--- a/pages/macwalletbuilds.textile
+++ b/pages/macwalletbuilds.textile
@@ -1,29 +1,29 @@
 ---
 layout: page
-title: Certified Mac Wallet Builds
+title: Certified Mac Wallet Builds Program
 ---
 
 h1. {{ page.title }}
 
 h3. Introduction
 
-This page outlines my Certified Mac Wallet Builds program for the cryptocurrency community.
+This page outlines my Certified Mac Wallet Builds Program for the cryptocurrency community.
 
-I am heavily involved in the cryptocurrency scene and offer these services as I am a registered Mac and iOS developer with Apple.  You can see the iOS Apps I have in the App Store in my <a href="{{ site.baseurl }}pages/projects.html">Projects page</a>.
+I am heavily involved in the cryptocurrency scene and offer these services as I am a registered Mac and iOS developer with Apple.
 
-My offer is to build and digitally sign your coin's Mac Wallet using my Apple-issued digital certificate and Developer ID.
+My offer is to *build and digitally sign* your coin's Mac Wallet using my *Apple-issued digital certificate and Developer ID*.
 
-The coin development team may then distribute an installer file for the Mac Wallet to your end users.  Your end users can download and use your Mac Wallet with confidence that it has been built by a trusted member of the community.
+The coin development team may then distribute an installer file for the Mac Wallet to your end users.  Your end users can download and use your Mac Wallet with confidence that it has been built by a trusted member of the community and is *malware free*.
 
-My aim as with all my cryptocurrency endeavors is to raise the level of professionalism and security in cryptocurrency.
+My aim as with all my cryptocurrency endeavors is to raise the level of *professionalism* and security in *cryptocurrency*.
 
-This program is priced at 0.38 Bitcoins, payable via my <a href="https://coinbase.com/jyap">Coinbase account</a>.  Please contact me if you are interested.
+If you are an end user you should *request your coin develpment team* provide you with certified Mac Wallet builds so you can buy/sell/trade your favorite coins with confidence.
+
+This program is priced at 0.38 Bitcoins, payable via my <a href="https://coinbase.com/jyap">Coinbase account</a>.
 
 h3. Further details
 
-My builds are performed on a Mac running OS X 10.7 and built against the 10.7 SDK.
-
-Since I am heavily involved in the cryptocurrency scene, I am often readily available to perform emergency builds.  I have read numerous BitcoinTalk threads where coin developers go missing at a crucial moment in their coin's infancy, leading to block chain forks and suspended trading.
+My builds are performed on a Mac running OS X 10.7 and built against the 10.7 SDK so are compatible with Mac OSX 10.7+.
 
 I have previously built Mac Wallets for coins such as Razorcoin, Nautiluscoin, Unobtanium, Pinkcoin and Zimstake.
 
@@ -51,6 +51,8 @@ Internal requirements count=1 size=192
 In OS X 10.7, Apple introduced Gatekeeper which blocks applications downloaded from the internet which have not been signed.  In OS X 10.8, by default if an app is unsigned, Gatekeeper blocks the app from being installed and warns you that it did not come from an identified developer.  Having your Mac Wallet signed avoids this end user usability issue and enhances the trust of your Mac Wallet.
 
 INSTALLER SCREEN SHOTS GO HERE
+
+Since I am heavily involved in the cryptocurrency scene, I am often readily available to perform emergency builds.  I have read numerous BitcoinTalk threads where coin developers go missing at a crucial moment in their coin's infancy, leading to block chain forks and suspended trading.
 
 h3. Agreement
 
