--- a/pages/macwalletbuilds.textile
+++ b/pages/macwalletbuilds.textile
@@ -13,7 +13,7 @@ I am heavily involved in the cryptocurrency scene and offer these services as I 
 
 My offer is to *build and digitally sign* your coin's Mac Wallet using my *Apple-issued digital certificate and Developer ID*.
 
-The coin development team can then make available an installer file for the signed Mac Wallet.  Your end users can download and use your Mac Wallet with confidence that it has been built by a trusted member of the community and is *malware free*.
+The coin development team can then make available an installer file for the signed Mac Wallet.  Your end users can download and use your Mac Wallet with confidence that it comes from a trusted member of the community and is *malware free*.
 
 My aim as with all my cryptocurrency endeavors is to raise the level of *professionalism* and security in *cryptocurrency*.
 
