--- a/pages/macwalletbuilds.textile
+++ b/pages/macwalletbuilds.textile
@@ -21,6 +21,8 @@ If you are an end user you should *request your coin development team* provide y
 
 This program is priced at 0.38 Bitcoins, payable via my <a href="https://coinbase.com/jyap">Coinbase account</a>.
 
+Alternatively this program is priced at 790 CoinmarketsCoins, payable via my JBS Stealth Address: smYpAnnye4tgrm33qj21EEZHmveCUJ132edhuSNaq8jxh5maXd3GbfiyjgbGZqWUZfagcSRPcNtjYkYo542sWjtdHEoxfbuRo6w7c9
+
 h3. Further details
 
 My builds are performed on a Mac running OS X 10.7 and built against the 10.7 SDK so are compatible with Mac OSX 10.7+.
