--- a/pages/cryptoaffiliates.textile
+++ b/pages/cryptoaffiliates.textile
@@ -18,6 +18,7 @@ h3. Exchanges
   <li><a href="https://www.coinmkt.com/?affiliateId=F6F4075C61454A94841EA4B7BAE9CB15">CoinMkt:</a> Buy and trade Bitcoins and other cryptocurrencies with fiat. FinCEN registered exchange and based in California.</li>
   <li><a href="https://www.coins-e.com/?ref=5019991480991744">Coins-E:</a> Coins-E was the first exchange to list Maxcoin and Razorcoin.</li>
   <li><a href="https://www.cryptsy.com/users/register?refid=85406">Cryptsy:</a> Cryptsy is one of the oldest exchanges and has a ton of trading pairs. FinCEN registered and based in Florida.</li>
+  <li><a href="https://www.okcoin.com/?invid=2013968">OKCoin:</a> OKCoin is based out of China and provides futures trading with 10x leverage.</li>
 </ul>
 
 h3. Mining rental
