--- a/pages/cryptoaffiliates.textile
+++ b/pages/cryptoaffiliates.textile
@@ -12,14 +12,10 @@ Here are some cryptocurrency affiliate links.
 h3. Exchanges
 
 <ul class="posts">
-  <li><a href="https://www.atomic-trade.com?refid=R11NVAK3">Atomic Trade:</a> I haven't traded here but they do have some interesting trading pairs. FinCEN registered and based in New Jersey.</li>
-  <li><a href="https://www.bitfinex.com/?refcode=N9u4dafizU">Bitfinex:</a> Trade Bitcoin, Litecoin and Darkcoin.</li>
+  <li><a href="https://www.bitfinex.com/?refcode=N9u4dafizU">Bitfinex:</a> Trade Bitcoin and Litecoin.</li>
   <li><a href="https://c-cex.com/?rf=4FECF5061C7C80AD">C-CEX:</a> C-CEX exchange tends to list newer alt-coins.</li>
-  <li><a href="https://www.coinmkt.com/?affiliateId=F6F4075C61454A94841EA4B7BAE9CB15">CoinMkt:</a> Buy and trade Bitcoins and other cryptocurrencies with fiat. FinCEN registered exchange and based in California.</li>
   <li><a href="https://www.coins-e.com/?ref=5019991480991744">Coins-E:</a> Coins-E was the first exchange to list Maxcoin and Razorcoin.</li>
-  <li><a href="https://www.cryptsy.com/users/register?refid=85406">Cryptsy:</a> Cryptsy is one of the oldest exchanges and has a ton of trading pairs. FinCEN registered and based in Florida.</li>
-  <li><a href="https://www.melotic.com/#/?action=register&referral_code=e2dbbf9">Melotic:</a> Melotic is an interesting exchange based out of Hong Kong that lists alt coins for trading.</li>
-  <li><a href="https://www.okcoin.com/?invid=2013968">OKCoin:</a> OKCoin is based out of China and provides futures trading with 10x leverage.</li>
+  <li><a href="https://www.okcoin.com/?invid=2013968">OKCoin:</a> OKCoin is based out of China and provides futures trading with 10x/20x leverage.</li>
   <li><a href="https://yobit.net/?bonus=vKyaZ">YoBit:</a> YoBit is a newer exchange that lists some new coins.</li>
 </ul>
 
