--- a/pages/cryptoaffiliates.textile
+++ b/pages/cryptoaffiliates.textile
@@ -38,5 +38,6 @@ h3. Other services
 <ul class="posts">
   <li><a href="https://www.digitalocean.com/?refcode=571ac31ec1b5">DigitalOcean:</a> DigitalOcean's virtual machines run on SSD's and are fast. I wrote a <a href="http://julianyap.com/2013/10/08/digital-ocean-first-impressions.html">review</a> about them.</li>
   <li><a href="http://www.namecheap.com/?aff=25649">Namecheap:</a> I switched over all my domains from GoDaddy to Namecheap when GoDaddy supported SOPA. Namecheap accepts Bitcoin as a payment method.</li>
+  <li><a href="https://nitrogensports.eu/r/492508">Nitrogen Sports:</a> Sports betting.</li>
 </ul>
 
