--- a/pages/cryptoaffiliates.textile
+++ b/pages/cryptoaffiliates.textile
@@ -13,6 +13,7 @@ h3. Exchanges
 
 <ul class="posts">
   <li><a href="https://www.bitfinex.com/?refcode=N9u4dafizU">Bitfinex:</a> Trade Bitcoin and Litecoin.</li>
+  <li><a href="https://www.bitmex.com/register/cOHSck">BitMEX:</a> Cryptocurrency derivatives trading platform with 100x/50x/25x leverage.</li>
   <li><a href="https://www.coinbase.com/join/jyap">Coinbase:</a> Buy $100 of bitcoin or more, and you'll earn $10 of free bitcoin with this link</li>
   <li><a href="https://c-cex.com/?rf=4FECF5061C7C80AD">C-CEX:</a> C-CEX exchange tends to list newer alt-coins.</li>
   <li><a href="https://www.coins-e.com/?ref=5019991480991744">Coins-E:</a> Coins-E was the first exchange to list Maxcoin and Razorcoin.</li>
@@ -38,5 +39,6 @@ h3. Other services
   <li><a href="https://www.digitalocean.com/?refcode=571ac31ec1b5">DigitalOcean:</a> DigitalOcean's virtual machines run on SSD's and are fast. I wrote a <a href="http://julianyap.com/2013/10/08/digital-ocean-first-impressions.html">review</a> about them.</li>
   <li><a href="http://www.namecheap.com/?aff=25649">Namecheap:</a> I switched over all my domains from GoDaddy to Namecheap when GoDaddy supported SOPA. Namecheap accepts Bitcoin as a payment method.</li>
   <li><a href="https://nitrogensports.eu/r/492508">Nitrogen Sports:</a> Sports betting.</li>
+  <li><a href="https://1broker.com/m/r.php?i=3421">1Broker</a> Participate in real-world markets directly with their Bitcoins.</li>
 </ul>
 
