--- a/pages/cryptoaffiliates.textile
+++ b/pages/cryptoaffiliates.textile
@@ -40,5 +40,6 @@ h3. Other services
   <li><a href="http://www.namecheap.com/?aff=25649">Namecheap:</a> I switched over all my domains from GoDaddy to Namecheap when GoDaddy supported SOPA. Namecheap accepts Bitcoin as a payment method.</li>
   <li><a href="https://nitrogensports.eu/r/492508">Nitrogen Sports:</a> Sports betting.</li>
   <li><a href="https://1broker.com/m/r.php?i=3421">1Broker</a> Participate in real-world markets directly with their Bitcoins.</li>
+  <li><a href="https://purse.io/?_r=Tx1b3k">Purse</a> Spend Bitcoins, save money. Receive 0.01 BTC when you spends or earn $50!</li>
 </ul>
 
